# movies-list

./: .gitignore  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
configuration/: production-example.yaml
src/: lib.rs  main.rs
src/components/: app.rs  mod.rs  search.rs
src/configuration/: mod.rs
src/data/: movie.rs
