[package]
name = "movies-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name="movies"
path = "src/main.rs"

[dependencies]
leptos = {version = "0.4.8", features = ["nightly"] }
leptos_actix = { version="0.4.8", optional = true }
leptos_meta = { version = "0.4.8", features = ["nightly"] }
leptos_router = { version = "0.4.8", features = ["nightly"] }
cfg-if ={ version = "1.0" }

wasm-bindgen = { version = "0.2", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
futures = { version = "0.3", optional = true }
simple_logger = { version = "4.0", optional = true }
reqwest = { version = "0.11.18", features = ["json"], optional = true}
config = {version = "0.13", optional = true}
url-escape = {version = "0.1.1", optional = true}
log = "0.4"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = {versuib = "1.0.104"}




[features]
default = ["csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:reqwest",
  "dep:config",
  "dep:url-escape",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:futures",
  "dep:simple_logger",
]

[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "console_error_panic_hook",
  "console_log",
  "futures",
  "leptos_actix",
  "simple_logger",
  "wasm-bindgen",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'